developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_text_before_or_after_nul_in_output_before.kmn
store(&NAME) 'ERROR_TextBeforeOrAfterNulInOutput'
store(&VERSION) '9.0'

begin Unicode > use(main)

group(main) using keys

c ERROR_TextBeforeOrAfterNulInOutput before nul
+ 'b' > 'b' nul
